# web-parser

./: CMakeLists.txt  README.md
src/web-parser/css/: Css.hpp  CssClassPath.hpp  CssHierarchy.cpp  CssHierarchy.hpp  CssParser.cpp  CssParser.hpp
src/web-parser/html/: HTMLLoader.cpp  HTMLLoader.hpp  HTMLParser.cpp  HTMLParser.hpp
src/web-parser/util/: String.hpp
tests/: CMakeLists.txt
tests/css-parse/: CMakeLists.txt  main.cpp  style.css
tests/html-load-css/: CMakeLists.txt  main.cpp  page.html  style.css
tests/html-parse/: CMakeLists.txt  main.cpp
